Fixed mobile date chooser background.
With the commit 31ba27fb2c631ed89d894c53485d3ffbc81a1db9 the order of
the included css files changed which messed up the background of the
date chooser dialog (mobile only).

--- a/org.eclipse.scout.rt.ui.rap.theme.rayo.mobile/theme/scout.mobile.css
+++ b/org.eclipse.scout.rt.ui.rap.theme.rayo.mobile/theme/scout.mobile.css
@@ -1025,6 +1025,12 @@ Shell.datechooser-dialog {
   background-color:#f4f8fc;
 }
 
+Shell[TITLE].datechooser-dialog {
+  border:2px solid #67a8ce;
+  border-radius:0px;
+  background-color:#f4f8fc;
+}
+
 Composite.datechooser-dialog { background-color:transparent; }
 
 Label.datechooser-dialog {
@@ -1964,6 +1970,12 @@ Button-FocusIndicator.timefield {
 }
 
 Shell.timechooser-dialog {
+  border:2px solid #67a8ce;
+  border-radius:0px;
+  background-color:#f4f8fc;
+}
+
+Shell[TITLE].timechooser-dialog {
   border:2px solid #67a8ce;
   border-radius:0px;
   background-color:#f4f8fc;
